--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2591,3 +2591,10 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	year = {2015}, 
 	note = "[Online; accessed 13-June-2015]"
 }
+
+@misc{PDF4LHC,
+	title = {{The Durham HepData Project}},
+	howpublished = "\url{http://hepdata.cedar.ac.uk/abouthepdata}",
+	year = {2015}, 
+	note = "[Online; accessed 13-June-2015]"
+}
