--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -116,7 +116,7 @@
 \morefloats
 \setcounter{secnumdepth}{3} % turn on section numbering, for now (3=subsubsection)
 
-%\input{frontmatter.tex}
+\input{frontmatter.tex}
 
 \setcounter{tocdepth}{3}
 \tableofcontents
@@ -131,50 +131,46 @@
 \chapter{\texorpdfstring{Simplified models for all \MET+X analyses}{Simplified models for all MET+X analyses}}
 \label{subsec:MonojetLikeModels}
 \input{tex/MonojetLikeModels}
-%
-%%\chapter{Specific models for signatures with heavy flavor quarks}
-%%\label{subsec:DMHFModels}
-%%\input{tex/DMHFModels}
-%
-%\chapter{Specific models for signatures with EW bosons}
-%\label{subsec:EWSpecificModels}
-%\input{tex/EWSpecificModels}
+
+\chapter{Specific models for signatures with EW bosons}
+\label{subsec:EWSpecificModels}
+\input{tex/EWSpecificModels}
 
 \chapter{Implementation of Models}
 \label{app:MonojetLikeModels_Appendix}
 \input{tex/MonojetLikeModels_Appendix.tex}
 
-%\chapter{Presentation of EFT results}
-%\label{sec:EFTValidity} 
-%\input{tex/EFTValidity.tex}
-%
-%\chapter{Evaluation of signal theoretical uncertainties}
-%\label{sec:TheoryUncertainties} 
-%\input{tex/TheoryUncertainties.tex}
+\chapter{Presentation of EFT results}
+\label{sec:EFTValidity} 
+\input{tex/EFTValidity.tex}
+
+\chapter{Evaluation of signal theoretical uncertainties}
+\label{sec:TheoryUncertainties} 
+\input{tex/TheoryUncertainties.tex}
 
 \chapter{Conclusions}
 \label{chapter:conclusions}
 \input{tex/Conclusions.tex}
  
-%%\input{tex/backmatter.tex}
+\input{tex/backmatter.tex}
 
-%\appendix
-%
-%%\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+\MET searches}{Appendix: Table of cross sections for  ttbar+\MET searches}}
-%%\label{app:TTBar_Xsecs}
-%%\input{tex/TTBar_Xsecs_Appendix.tex}
-%
-%\chapter{Appendix: Additional models for Dark Matter searches}
-%\label{app:EWSpecificModels_Appendix}
-%\input{tex/EWSpecificModels_Appendix.tex}
-%
-%\chapter{Appendix: Presentation of experimental results for reinterpretation}
-%\label{app:Presentation_Of_Experimental_Results}
-%\input{tex/Presentation_Of_Experimental_Results.tex}
-%
-%\chapter{Appendix: Additional details and studies within the Forum}
-%\label{app:Additional_details}
-%\input{tex/AdditionalDetails.tex}
+\appendix
+
+%\chapter{\texorpdfstring{Appendix: Table of cross sections for $t\bar{t}$+\MET searches}{Appendix: Table of cross sections for  ttbar+\MET searches}}
+%\label{app:TTBar_Xsecs}
+%\input{tex/TTBar_Xsecs_Appendix.tex}
+
+\chapter{Appendix: Additional models for Dark Matter searches}
+\label{app:EWSpecificModels_Appendix}
+\input{tex/EWSpecificModels_Appendix.tex}
+
+\chapter{Appendix: Presentation of experimental results for reinterpretation}
+\label{app:Presentation_Of_Experimental_Results}
+\input{tex/Presentation_Of_Experimental_Results.tex}
+
+\chapter{Appendix: Additional details and studies within the Forum}
+\label{app:Additional_details}
+\input{tex/AdditionalDetails.tex}
 
 %%FIXME: it does not understand Collaboration. Fix here rather than hacking bib file?
 % \bibliographystyle{unsrtnat}
