--- a/doc/tex/Conclusions.tex
+++ b/doc/tex/Conclusions.tex
@@ -37,28 +37,28 @@ using the tools employed for studies within the Forum and marked in bold in Tabl
  
 \input{tex/SummaryTable.tex}. 
 
-%This document primarily presents studies related to simplified models. 
-%The presentation of results for EFT benchmark models is also discussed. 
-%The studies contained in this report are meant to highlight the use of
-%EFTs as a benchmark that is complementary to simplified models, 
-%and to demonstrate how that collider results could be presented a function of the 
-%fraction of events that are valid within the contact interaction approximation.  
-%
-%A number of points remain to be developed beyond the scope of this Forum, 
-%in order to fully benefit from LHC searches in the global quest for Dark Matter.
-%First and foremost, many implicit assumptions have not been fully explored in this work. 
-%As a consequence, the list of models employed for early LHC Run-2 searches is not meant to be 
-%complete or exhaustive, nor cover the entire range of possibility even for the limited scope of the 
-%putative collider-stable dark matter candidate considered. 
-%The limitations of the list of benchmarks considered should encourage the theoretical community to continue developing
-%models and calculations, and guide the experimental community to test and use those new ideas in future searches. 
-%Furthermore, we see the need for broader discussion on the comparison 
-%of experimental results from different energy frontiers. The role of constraints on the mediator particles 
-%from direct past and present collider searches should be developed further. 
-%The uncertainties in these comparisons should be discussed and conveyed, so that the different results 
-%can be placed in the correct context to enhance their complementarity.
-%Work beyond this Forum will be needed to provide guidance on the identification of a possible signal, 
-%if hints are found either during the early LHC Run-2 or by direct and indirect detection experiments. Conversely,
-%if nothing is found, novel collider search strategies that explore new corners will be required. 
-%\Todo{These points will be discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 10th.} 
+This document primarily presents studies related to simplified models. 
+The presentation of results for EFT benchmark models is also discussed. 
+The studies contained in this report are meant to highlight the use of
+EFTs as a benchmark that is complementary to simplified models, 
+and to demonstrate how that collider results could be presented a function of the 
+fraction of events that are valid within the contact interaction approximation.  
+
+A number of points remain to be developed beyond the scope of this Forum, 
+in order to fully benefit from LHC searches in the global quest for Dark Matter.
+First and foremost, many implicit assumptions have not been fully explored in this work. 
+As a consequence, the list of models employed for early LHC Run-2 searches is not meant to be 
+complete or exhaustive, nor cover the entire range of possibility even for the limited scope of the 
+putative collider-stable dark matter candidate considered. 
+The limitations of the list of benchmarks considered should encourage the theoretical community to continue developing
+models and calculations, and guide the experimental community to test and use those new ideas in future searches. 
+Furthermore, we see the need for broader discussion on the comparison 
+of experimental results from different energy frontiers. The role of constraints on the mediator particles 
+from direct past and present collider searches should be developed further. 
+The uncertainties in these comparisons should be discussed and conveyed, so that the different results 
+can be placed in the correct context to enhance their complementarity.
+Work beyond this Forum will be needed to provide guidance on the identification of a possible signal, 
+if hints are found either during the early LHC Run-2 or by direct and indirect detection experiments. Conversely,
+if nothing is found, novel collider search strategies that explore new corners will be required. 
+\Todo{These points will be discussed at the meeting that marks the conclusion of the works of the Forum, to be held during the week of June 21st.} 
 
