--- a/doc/tex/EWSpecificModels_EFT.tex
+++ b/doc/tex/EWSpecificModels_EFT.tex
@@ -30,8 +30,8 @@ For this reason, model-independent results as in Appendix~\ref{app:Presentation_
 should be privileged over considering these operators as realistic benchmarks. 
 %We also recommend not to optimize searches based on those benchmark models. 
 
-However, another consideration that emerged from the Forum discussion was that the EFT approach allows
-more model-independence when reinterpreting results, making it worth still having
+However, the Forum discussion highlighted that the EFT approach allows
+more model-independence when reinterpreting results, and that it is worth still considering
 interpretation of the results available in terms of these operators. Furthermore, once simplified models are available
 for those operators, EFT results can be used as a limiting case for consistency checks. 
 We devote the end of this Section to a discussion on the presentation of results 
@@ -40,7 +40,7 @@ using a conservative procedure that is only dependent on EFT parameters.
 
 These models are known at LO, and they can be interfaced to a parton shower. The studies in this Section
 have been performed using a model within \madgraph v2.2.3, interfaced to \pythia 8 for the parton shower.  
-The implementation of these models is discussed further in Appendix~\ref{sub:EFTModels}.
+The implementation of these models is discussed further in Section~\ref{sub:EFTModels}.
 
 %CD: what is this?
 %\newthought{Implementation discussed in the Appendix}
