--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -503,6 +503,7 @@ the study in this tree-level effective formulation. A full study of the process 
 finite top-quark mass and parton shower effects is possible yet left for future work.
 
 \subsubsection{\madgraph details for 2HDM Higgs+MET model}
+\label{sec:monoHImplementation}
 
 While a 2HDM UFO implementation at NLO accuracy to be used with \madgraph has been made available at the end of the work
 of the Forum~\cite{NewMadgraphModels}, in this work we have only considered LO simulations.~\Todo{Not sure this is available yet?}
