--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -2593,8 +2593,8 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 }
 
 @misc{PDF4LHC,
-	title = {{The Durham HepData Project}},
-	howpublished = "\url{http://hepdata.cedar.ac.uk/abouthepdata}",
+	title = {{PDF4LHC: Recommendation for LHC cross section calculations}},
+	howpublished = "\url{http://www.hep.ucl.ac.uk/pdf4lhc/}",
 	year = {2015}, 
 	note = "[Online; accessed 13-June-2015]"
 }
