--- a/doc/tex/MonojetLikeModels.tex
+++ b/doc/tex/MonojetLikeModels.tex
@@ -412,6 +412,55 @@ decaying to Dirac DM fermions in the V and A case, taking the minimum width for 
 %% %motivate the mass point for the coupilng scan
 %% We choose to display the results in the $\mMed$--$\mDM$ plane for the choice of the couplings $\gq=\gDM=1$. 
 
+
+Tables\,\ref{tab:widthV} and \ref{tab:widthA} give the $\Gamma_{\rm{min}}/\mMed$ ratio for the parameter grid proposed for vector and axial-vector \schannel models, respectively. The numbers range from $\sim0.02$ in the off-shell Dark Matter production regime at $2\mDM>\mMed$ to $\sim0.06$ in the on-shell regime for heavy mediators where all coupling channels contribute.
+
+\begin{table}
+	\centering
+	\resizebox{\textwidth}{!}{
+		\begin{tabular}{| l |r r r r r r r r r r|}
+			\hline
+			\multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{10}{c|}{\mmed/\gev} \\
+			&         10  & 20 & 50 & 100 & 200 & 300 & 500 &         1000  &                 2000   &         10000  \\
+			\hline
+			\hline
+			1 & 0.049  & 0.051  & 0.051  & 0.051  & 0.051  & 0.051  & 0.056  & 0.056  & 0.056  & 0.056  \\
+			10 & 0.022  & 0.024  & 0.054  & 0.052  &        &        &        &        &        & 0.056  \\
+			50 & 0.022  &        & 0.025  & 0.025  & 0.055  & 0.053  &        &        &        & 0.056  \\
+			150 & 0.022  &        &        &        & 0.025  & 0.025  & 0.061  & 0.058  &        & 0.056  \\
+			500 & 0.022  &        &        &        &        &        & 0.029  & 0.030  & 0.060  & 0.057  \\
+			1000 & 0.022  &        &        &        &        &        &        & 0.030  & 0.030  & 0.057  \\
+			\hline
+		\end{tabular}}
+		\caption%[][5cm]
+		{Minimal width of the vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+		\label{tab:widthV}
+	\end{table}
+	\vspace{4cm}
+	
+	\begin{table}
+		\centering
+		\resizebox{\textwidth}{!}{
+			\begin{tabular}{| l |r r r r r r r r r r|}
+				\hline
+				\multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{10}{c|}{\mmed/\gev} \\
+				&         10  & 20 & 50 & 100 & 200 & 300 & 500 &         1000  &                 2000   &         10000  \\
+				\hline
+				\hline
+				1 & 0.045  & 0.049  & 0.051  & 0.051  & 0.051  & 0.051  & 0.053  & 0.055  & 0.056  & 0.056  \\
+				10 & 0.020  & 0.022  & 0.047  & 0.050  &        &        &        &        &        & 0.056  \\
+				50 & 0.020  &        & 0.025  & 0.025  & 0.045  & 0.048  &        &        &        & 0.056  \\
+				150 & 0.020  &        &        &        & 0.025  & 0.025  & 0.044  & 0.053  &        & 0.056  \\
+				500 & 0.020  &        &        &        &        &        & 0.027  & 0.029  & 0.050  & 0.056  \\
+				1000 & 0.020  &        &        &        &        &        &        & 0.029  & 0.030  & 0.055  \\
+				\hline
+			\end{tabular}}
+			\caption%[][5cm]
+			{Minimal width of the axial-vector mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+			\label{tab:widthA}
+		\end{table}
+		\vspace{4cm}
+
 \subsection{Additional considerations for $V$+\MET{} signatures}
 \label{sec:bosonrad}
 \input{tex/EWSpecificModels_VAMediators}
@@ -740,6 +789,59 @@ decaying to Dirac DM fermions in the scalar and pseudoscalar case, taking the mi
 % \label{fig:monojet_grid_S}
 % \end{figure}
 
+
+For the parameter grid for scalar and pseudo-scalar mediator \schannel exchange, the $\Gamma_{\rm{min}}/\mMed$ ratio is given in Tables\,\ref{tab:widthS} and \ref{tab:widthP}, respectively. In the on-shell production regime, the ratio is $\sim0.04$. Very narrow resonances with $\Gamma_{\rm{min}}/\mMed<0.001$ correspond to the mass points where Dark Matter is produced off-shell. Note that the loop-induced contribution from gluons is ignored in the width calculation.
+
+
+\begin{table}
+	\centering
+	\resizebox{\textwidth}{!}{
+		\begin{tabular}{| l |r r r r r r r r r|}
+			\hline
+			\multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{9}{c|}{\mmed/\gev} \\
+			&         10  & 20 & 50 & 100 & 200 & 300 & 500 &         1000  & 10000  \\
+			\hline
+			\hline
+			1 & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.041  & 0.043  & 0.043  \\
+			10 &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        &        &        & 0.043  \\
+			50 &$<$0.001&        &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        & 0.043  \\
+			150 &$<$0.001&        &        &        &$<$0.001&$<$0.001& 0.041  & 0.043  & 0.043  \\
+			500 &$<$0.001&        &        &        &        &        & 0.001  & 0.003  & 0.043  \\
+			1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
+			\hline
+		\end{tabular}}
+		\caption%[][5cm]
+		{Minimal width of the scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+		\label{tab:widthS}
+	\end{table}
+	\vspace{4cm}
+	
+	
+	\begin{table}
+		\centering
+		\resizebox{\textwidth}{!}{
+			\begin{tabular}{| l |r r r r r r r r r|}
+				\hline
+				\multicolumn{1}{|c|}{\mDM/\gev} & \multicolumn{9}{c|}{\mmed/\gev} \\
+				&         10  & 20 & 50 & 100 & 200 & 300 & 500 &         1000  & 10000  \\
+				\hline
+				\hline
+				1 & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.040  & 0.042  & 0.043  & 0.043  \\
+				10 &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        &        &        & 0.043  \\
+				50 &$<$0.001&        &$<$0.001&$<$0.001& 0.040  & 0.040  &        &        & 0.043  \\
+				150 &$<$0.001&        &        &        &$<$0.001&$<$0.001& 0.042  & 0.043  & 0.043  \\
+				500 &$<$0.001&        &        &        &        &        & 0.003  & 0.003  & 0.043  \\
+				1000 &$<$0.001&        &        &        &        &        &        & 0.003  & 0.043  \\
+				\hline
+			\end{tabular}}
+			\caption%[][5cm]
+			{Minimal width of the pseudo-scalar mediator exchanged in \schannel divided by its mass, assuming $\gq=0.25$ and $\gDM=1$. The loop-induced gluon contribution is ignored. The numbers tabulated under $2\mDM=\mMed$ correspond to the width calculated for $\mMed-5$~\gev.}
+			\label{tab:widthP}
+		\end{table}
+		\vspace{4cm}
+		
+
+
 \subsection{Additional considerations for $V+\MET$ signatures}
 \label{sub:EW_Scalar}
 
@@ -990,3 +1092,6 @@ this scaling is only approximate (up to 20\%)  and relies on the narrow width ap
 		\caption{\label{fig:xsec_scaling} An example comparing a simple cross section scaling versus the computation from the \madgraph generator, for a scalar $t \bar{t}$+\MET model with $m_{\phi}=400\,{\rm GeV}$, $\mdm=1\,{\rm GeV}$ and all couplings set to unity. In this example, the scaling relationship holds for $\Gamma_{\phi}/m_{\phi}$ below $0.2$, beyond which finite width effects become important and the simple scaling breaks down.}
 	\end{center}
 \end{figure}
+
+%%%%%%
+
