--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -5,17 +5,14 @@ plays in general a more important role for the background estimations
 does for signal simulations. Nevertheless, also for signal samples theoretical 
 uncertainties are relevant, and may become even dominant in certain regions of phase space.
 
-The uncertainties on the factorization and renormalization scales are assessed by the experimental by varying
-the original scales of the process by factors of 0.5 and 2. The evaluation of the uncertainty on the choice of PDF are
-
-
-
-Uncertainties affecting the signal acceptance times efficiency A × ǫ, related to the generation of the signal samples, include: uncertainties on the modelling of the initial- and final-state gluon radiation, as determined using simulated samples with modified parton-shower parameters, by factors of two and one half, that enhance or suppress the parton radiation; uncertainties due to PDF and variations of the αs(mZ) value employed, as computed from the envelope of CT10, MRST2008LO and NNPDF21LO error sets; and the choice of renormalization/factorization scales, and the parton-shower matching scale settings, varied by factors of two and one half.
-In addition, theoretical uncertainties on the predicted cross sections, including PDF and renormaliza- tion/factorization scale uncertainties, are computed separately for the different models.
-
-We do not cover the uncertainties related to the merging of different samples, nor the uncertainty
+The uncertainties on the factorization and renormalization scales are assessed by the experimental collaborations by varying
+the original scales of the process by factors of 0.5 and 2. The evaluation of the uncertainty on the choice of PDF follows
+the PDF4LHC recommendation ~\cite{PDF4LHC} of considering the envelope of different PDF error sets, in order to account
+for the uncertainty on the various PDFs as well as the uncertainty on the choice of the central value PDF. 
+The Forum has not discussed the uncertainties related to the merging of different samples, nor the uncertainty
 due to the choice of the modeling of the parton shower.  
-This chapter provides technical details on how scale and PDF uncertainties can be assessed for events generated with \powheg and \madgraph.
+This chapter provides technical details on how scale and PDF uncertainties can be assessed 
+for events generated with \powheg and \madgraph.
 
 %\Todo{This section describes the technical details of how to vary
 %  input parameters, but it does not describe the overall strategy of
