--- a/doc/tex/EWSpecificModels_MonoHiggs.tex
+++ b/doc/tex/EWSpecificModels_MonoHiggs.tex
@@ -543,7 +543,8 @@ and still give a potentially observable Higgs+\MET signal.
  where $h,H$ are neutral CP-even scalars,
  $H^\pm$ is a charged scalar, and $A^0$ is a neutral CP-odd scalar. 
  In this framework, $\tan{\beta} \equiv v_u/v_d$, and $\alpha$ is the mixing angle that diagonalizes 
- the $h - H$ mass squared matrix. 
+ the $h - H$ mass squared matrix. This model also contains an additional scalar singlet $\phi$
+ that leads to spontaneous symmetry breaking. 
  %FIXME: this is an external constrain that may or may not be included 
 %The masses of the remaining scalars $H, A^0, H^\pm$ are assumed to be 
 %around or above $300$~\gev, respecting $b \to s \gamma$ constraints \cite{Branco:2011iw}.
